fix(nutrition): address code-review findings on PdfExportService
- Wrap buildPdf content in try-finally so doc.close() is always called
  even when an add*Section() helper throws
- countDaysOnTarget: use net kcal (consumed - burned) to stay consistent
  with the surplus/deficit annotation in renderDayTotals
- addDailyLogSection: remove dead emptyDaySummary() fallback; iterate
  ctx.days() directly since MealEntryService.getDays() guarantees one
  DaySummaryDTO per calendar day
- Add gracefulWhenTargetsMissing test covering the targets onErrorReturn
  path
- Stream.toList() instead of Collectors.toList() (Java 17 idiom)
- Replace en/em dash literals with plain ASCII hyphens for font safety
- Add ordering comment on ctx.weights().get(0) weight lookup

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>